[gd_scene load_steps=12 format=3 uid="uid://cjnujus1tx5bm"]

[ext_resource type="Texture2D" uid="uid://dy8waqbs5naj7" path="res://Resources/battleUI/battleTextBox.png" id="1_ewts8"]
[ext_resource type="Script" path="res://BattleSceneContent/battle_scene.gd" id="1_l3p0b"]
[ext_resource type="Texture2D" uid="uid://dqcb0qebfcvb2" path="res://Textures/paper_assets/ChefBackPNG.png" id="2_l815p"]
[ext_resource type="Texture2D" uid="uid://bgs6a1pmy2luk" path="res://Resources/battleUI/battleBox.png" id="2_mt6id"]
[ext_resource type="Texture2D" uid="uid://dui6s3t4rqt40" path="res://Resources/battleUI/flavorText.png" id="3_qu0h3"]
[ext_resource type="Texture2D" uid="uid://bud022wegcbj4" path="res://Resources/battleUI/HPBox.png" id="4_by704"]
[ext_resource type="Texture2D" uid="uid://bk1gatqh62nl7" path="res://Resources/battleUI/buttons/TOAST.png" id="5_mpcfu"]
[ext_resource type="Texture2D" uid="uid://l4jxdijcfv1" path="res://Resources/battleUI/buttons/SMASH.png" id="6_icari"]
[ext_resource type="Texture2D" uid="uid://blftc81vnw136" path="res://Resources/battleUI/buttons/MELT.png" id="7_os68v"]
[ext_resource type="Texture2D" uid="uid://edo84fi316a5" path="res://Resources/battleUI/buttons/RUN.png" id="14_cyrdu"]
[ext_resource type="Texture2D" uid="uid://bcxa2i6m14280" path="res://Textures/paper_assets/TomatoPaperPNGScaled.png" id="17_46nyx"]

[node name="BattleSceneTextured" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -896.0
offset_bottom = -424.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
script = ExtResource("1_l3p0b")

[node name="ChefSprite" type="Sprite2D" parent="."]
position = Vector2(20, 190)
scale = Vector2(0.135, 0.15)
texture = ExtResource("2_l815p")

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="."]
layout_mode = 0
offset_right = 256.0
offset_bottom = 224.0
ratio = 1.1429
stretch_mode = 0

[node name="BattleTextBox" type="Sprite2D" parent="AspectRatioContainer"]
visible = false
texture_filter = 1
position = Vector2(128, 192)
texture = ExtResource("1_ewts8")

[node name="Label" type="Label" parent="AspectRatioContainer/BattleTextBox"]
offset_left = -123.0
offset_top = -24.0
offset_right = 123.0
offset_bottom = 26.0
theme_override_colors/font_color = Color(0.283004, 0.495969, 0.692313, 1)
theme_override_font_sizes/font_size = 9
text = "This text goes around and around and around and around the box"
autowrap_mode = 2

[node name="BattleBox" type="Sprite2D" parent="AspectRatioContainer"]
texture_filter = 1
position = Vector2(128, 192)
texture = ExtResource("2_mt6id")

[node name="FlavorText" type="Sprite2D" parent="AspectRatioContainer"]
texture_filter = 1
position = Vector2(128, 148)
texture = ExtResource("3_qu0h3")

[node name="HpBox" type="Sprite2D" parent="AspectRatioContainer"]
texture_filter = 1
position = Vector2(224, 142)
texture = ExtResource("4_by704")

[node name="Label" type="Label" parent="AspectRatioContainer/HpBox"]
offset_left = -29.0
offset_top = -10.0
offset_right = 64.0
offset_bottom = 7.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 9
text = "HP: 15/15"

[node name="Moves" type="Node2D" parent="."]

[node name="Move1" type="TextureButton" parent="Moves"]
texture_filter = 1
offset_left = 77.0
offset_top = 172.0
offset_right = 126.0
offset_bottom = 190.0
texture_normal = ExtResource("5_mpcfu")

[node name="Move2" type="TextureButton" parent="Moves"]
texture_filter = 1
offset_left = 130.0
offset_top = 172.0
offset_right = 179.0
offset_bottom = 190.0
texture_normal = ExtResource("6_icari")

[node name="Move3" type="TextureButton" parent="Moves"]
texture_filter = 1
offset_left = 77.0
offset_top = 194.0
offset_right = 126.0
offset_bottom = 212.0
texture_normal = ExtResource("7_os68v")

[node name="Run" type="TextureButton" parent="Moves"]
texture_filter = 1
offset_left = 130.0
offset_top = 194.0
offset_right = 179.0
offset_bottom = 212.0
texture_normal = ExtResource("14_cyrdu")

[node name="EnemySprite" type="Sprite2D" parent="."]
position = Vector2(131, 77)
scale = Vector2(0.15, 0.15)
texture = ExtResource("17_46nyx")

[connection signal="pressed" from="Moves/Move1" to="." method="_on_move_1_pressed"]
[connection signal="pressed" from="Moves/Move2" to="." method="_on_move_2_pressed"]
[connection signal="pressed" from="Moves/Move3" to="." method="_on_move_3_pressed"]
[connection signal="pressed" from="Moves/Run" to="." method="_on_run_pressed"]
